# api-tradingview-acces

./: .gitignore  .replit  README.md  ROADMAP.md  main.py  pyproject.toml  replit.md  server.py  tradingview.py
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
data/: pinescript_control.db
src/: cookie_manager.py  database.py  models.py  server.py  services.py  tradingview.py
src/data/: pinescript_control.db
src/routes/: api_routes.py
templates/: access.html  admin.html  clients.html  dashboard.html  documentation.html  indicators.html
